# veripython

./: .gitignore  AST.cpp  AST.h  ArcBackend.cpp  ArcBackend.h  CMakeLists.txt  CircuitSymbol.cpp  CircuitSymbol.h  CombLogics.cpp  CombLogics.h  EmitFIRRTL.cpp  EmitFIRRTL.h  Exceptions.h  FIRToHW.cpp  FIRToHW.h  HardwareModel.cpp  HardwareModel.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  RtlModule.cpp  RtlModule.h  RtlSimulator.cpp  RtlSimulator.h  RtlVisualizer.cpp  RtlVisualizer.h  SequentialLogics.cpp  SequentialLogics.h  Testbench.cpp  Testbench.h  lex.yy.c  main.cpp  pytb.py  verilog.l
.github/workflows/: buildAndTest.yaml  submissions.yaml  uploadBuiltReleases.yaml
doc/: full_adder.json  full_adder_token.json  reg_simple_test2.json  reg_simple_test2_token.json  run_readme.txt  template.latex
tests/: ArcilatorHeaderCppTests.cpp  ParserTests.cpp  ahc_old.py  arcilator-header-cpp.py  arcilator-pytb-gen.py  arcilator_pylib.py  birthday_tb.py  header-cpp.template  mux_test.fir.dialect  mux_test.hw
tests/mlir/: arcilator.json  arcilator.ll  arcilator.mlir  decoupledGCD.fir  decoupledGCD.hw.mlir  decoupledGCD.json  mux_test.fir  mux_test.json  mux_test.ll  riscv-mini.hw.mlir  riscv-mini.json  riscv-mini.ll  rocket_dual_large.json  rocket_medium_master.json  rocket_small_master.json
tests/verilog_srcs/: birthday.v  concat.v  full_adder.v  mux_test.v  mux_test_llvm.v  reg_simple_test0.v  reg_simple_test1.v  reg_simple_test2.v  slicing_test.v  test1.v
